# aurorae

./: .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  aurorae.knsrc.cmake  create-branch.sh
config/: auroraeconfig.cpp
po/ar/: aurorae.po
po/ca/: aurorae.po
po/ca@valencia/: aurorae.po
po/cs/: aurorae.po
po/de/: aurorae.po
po/en_GB/: aurorae.po
po/es/: aurorae.po
po/eu/: aurorae.po
po/fi/: aurorae.po
po/fr/: aurorae.po
po/ga/: aurorae.po
po/gl/: aurorae.po
po/he/: aurorae.po
po/hu/: aurorae.po
po/ia/: aurorae.po
po/it/: aurorae.po
po/ka/: aurorae.po
po/ko/: aurorae.po
po/lt/: aurorae.po
po/lv/: aurorae.po
po/nb/: aurorae.po
po/nl/: aurorae.po
po/pl/: aurorae.po
po/pt_BR/: aurorae.po
po/ru/: aurorae.po
po/sl/: aurorae.po
po/sv/: aurorae.po
po/tr/: aurorae.po
po/uk/: aurorae.po
po/zh_CN/: aurorae.po
po/zh_TW/: aurorae.po
src/: CMakeLists.txt  Messages.sh  aurorae.knsrc.cmake  plasma-apply-aurorae.cmake
src/config/: CMakeLists.txt  kcm_auroraeconfig.json
src/qml/: aurorae.qml
themes/plastik/package/: metadata.json
v1/: CMakeLists.txt  aurorae.cpp  aurorae.h
v1/config/: kcm_auroraeconfig.json
v1/themes/plastik/package/: metadata.json
v2/: CMakeLists.txt  aurorae.json  decoration.cpp  decoration.h  decorationbutton.cpp  decorationbutton.h  decorationbuttongroup.cpp  decorationbuttongroup.h  decorationtheme.cpp  decorationtheme.h  decorationthemeprovider.cpp  decorationthemeprovider.h  logging.cpp  logging.h
